name:                haskellscripts
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskellscripts#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable haskellscripts-exe
  hs-source-dirs:      
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellscripts
                     , directory
                     , conduit
                     , conduit-extra
                     , resourcet
                     , bytestring
                     , text
                     , attoparsec
                     , time
                     , exceptions
                     , mtl
                     
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/githubuser/haskellscripts
